--- a/Project-2/index.html
+++ b/Project-2/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" type="x-icon" href="./img/logo.png">
     <title>Test | Demo</title>
     <link rel="stylesheet" href="style.css">
 </head>
@@ -11,11 +12,11 @@
     <div id="page1">
           <div id="header">
             <img src="./img/Sample Logo.png" alt="logo">
-            <ul>
-                <li>Features</li>
-                <li>Pricing</li>
-                <li>Community</li>
-                <li>Support</li>
+            <ul id="navList">
+                <li id="l1">Features</li>
+                <li id="l2">Pricing</li>
+                <li id="l3">Community</li>
+                <li id="l4">Support</li>
             </ul>
             <div id="buttons">
                 <button id="login">Login</button>
@@ -23,7 +24,7 @@
             </div>
           </div>
           <div id="hero">
-            <img src="./img/Hero E.png" alt="">
+            <img src="./img/Hero E.png" alt="img">
           </div>
     </div>
     <div id="page2" class="container">
@@ -52,6 +53,13 @@
            <button class="btn">Learn more</button>
         </div>
 
+    </div>
+    <div id="page3">
+        <div id="header2">
+            <h1>Have you ever posted any photo on social media?</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse eligendi aliquam animi, distinctio minus voluptas.</p>
+        </div>
+        <div id="hero2"></div>
     </div>
 </body>
 </html>
